[package]
name = "Ampersand"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand = "1.9.0"
monster_chess = "0.0.16"
monster_ugi = "0.0.6"
rand = "0.8.5"
serde = { version = "1.0.158",  features = ["derive"] }
serde_json = "1.0.94"

[profile.release]
debug = true